# L-LIDE

./: .gitignore  CMakeLists.txt  L-LIDE.fig  README.md
.cache/clangd/index/: code_reader.cpp.8D06A5E3497564A5.idx  code_reader.hpp.025B1F28F5B2A114.idx  code_viewer.cpp.747178341A9B5293.idx  color.cpp.8AEB76E50A7C8205.idx  main.cpp.464A8D3042272980.idx  theme.cpp.1862E4364BFA31A6.idx  theme.cpp.34D919B68BDB7E55.idx  window.cpp.B1D68670060929D6.idx  window.hpp.43B8EF1A537A0C28.idx
include/core/: code_viewer.hpp  theme.hpp  window.hpp
src/: main.cpp  window.cpp
src/core/: code_viewer.cpp  main.cpp  theme.cpp  window.cpp
src/core/headers/: window.hpp
src/core/pluginAPI/headers/: theme.hpp
tests/: foo.cpp
